--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -71,5 +71,5 @@ jobs:
           path: |
             bin/Release/LibreHardwareMonitorLib.*.nupkg
 
-      - name: Publish to NuGet
-        run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
+#      - name: Publish to NuGet
+#        run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET_API_KEY}}
